# did-webvh

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  build.rs  did_tdw.spdx.json  did_webvh.spdx.json  kotlin-build.sh  python-build.sh  uniffi.toml
.github/workflows/: README.md  osv-scanner.yml
benches/: did_tdw_benchmark.rs  did_webvh_benchmark.rs
criterion/: README.md
criterion/did_tdw/TrustDidWeb_read/10/base/: estimates.json  sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/10/report/: index.html
criterion/did_tdw/TrustDidWeb_read/100/base/: tukey.json
criterion/did_tdw/TrustDidWeb_read/100/new/: estimates.json  sample.json
criterion/did_tdw/TrustDidWeb_read/100/report/: index.html
criterion/did_tdw/TrustDidWeb_read/200/base/: estimates.json  sample.json
criterion/did_tdw/TrustDidWeb_read/200/new/: tukey.json
criterion/did_tdw/TrustDidWeb_read/200/report/: index.html
criterion/did_tdw/TrustDidWeb_read/300/base/: estimates.json  sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/300/report/: index.html
criterion/did_tdw/TrustDidWeb_read/400/base/: estimates.json  sample.json
criterion/did_tdw/TrustDidWeb_read/400/new/: tukey.json
criterion/did_tdw/TrustDidWeb_read/400/report/: index.html
criterion/did_tdw/TrustDidWeb_read/5/base/: sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/5/new/: estimates.json
criterion/did_tdw/TrustDidWeb_read/5/report/: index.html
criterion/did_tdw/TrustDidWeb_read/50/base/: estimates.json
criterion/did_tdw/TrustDidWeb_read/50/new/: sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/50/report/: index.html
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/10/base/: tukey.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/10/new/: estimates.json  sample.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/10/report/: index.html
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/100/base/: estimates.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/100/new/: sample.json  tukey.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/100/report/: index.html
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/200/new/: estimates.json  sample.json  tukey.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/200/report/: index.html
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/300/base/: sample.json  tukey.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/300/new/: estimates.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/300/report/: index.html
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/400/base/: tukey.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/400/new/: estimates.json  sample.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/400/report/: index.html
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/5/base/: sample.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/5/new/: estimates.json  tukey.json
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (sequential)/10/base/: sample.json  (+1 more)
criterion/did_webvh/TrustDidWeb_read/report/: index.html
criterion/did_webvh/WebVerifiableHistory_read/report/: index.html
criterion/did_webvh/report/: index.html
criterion/report/: index.html
src/: did_tdw.udl  did_webvh.rs  did_webvh.udl  did_webvh_jsonschema.rs  did_webvh_method_parameters.rs  did_webvh_parameters.rs  errors.rs  lib.rs
src/embed/jsonschema/: did_log_jsonschema_v_1_0.json  did_log_jsonschema_v_1_0_eid_conform.json
test_data/manually_created/: key_rotation.jsonl
test_data/manually_created/unhappy_path/: signed_with_outdated_key.jsonl
test_data/third_party_test_vectors/: pre-1_0-spec.jsonl
(+231 files in other folders)
